[tool.poetry]
name = "apod"
version = "0.1.0"
description = ""
authors = ["Sergey Petrin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.11.1"
pytest = "^7.2.1"
requests = "^2.28.2"
peewee = "^3.15.4"
loguru = "^0.6.0"
python-telegram-bot = "^20.0"
python-dotenv = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
