[tool.poetry]
name = "apod"
version = "0.1.0"
description = ""
authors = ["Sergey Petrin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.11.1"
pytest = "^8.2.1"
requests = "^2.28.2"
peewee = "^3.15.4"
loguru = "^0.7.2"
python-telegram-bot = "^21.2"
python-dotenv = "^0.21.1"
langdetect = "^1.0.9"
sentry-sdk = "^2.14.0"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
