[project]
name = "apod"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "requests>=2.32.3",
    "peewee>=3.17.6",
    "loguru>=0.7.3",
    "aiogram>=3.7",
    "python-dotenv>=1.0.0",
    "langdetect>=1.0.9",
    "sentry-sdk>=2.14.0",
    "httpx>=0.28.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]